--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "web-vitals": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "less:compile": "less-watch-compiler --config less-watcher.config.json",
     "storybook": "start-storybook -p 6006 -s public",
@@ -89,6 +89,7 @@
     "lint-staged": "^11.2.2",
     "prettier": "^2.2.1",
     "react-app-rewire-alias": "^1.1.3",
+    "react-app-rewired": "^2.1.8",
     "react-refresh": "^0.10.0",
     "sass": "^1.41.1",
     "tsconfig-paths": "^3.9.0"
