--- a/.eslintrc
+++ b/.eslintrc
@@ -58,5 +58,10 @@
         "project": ["./tsconfig.json"]
       }
     }
-  ]
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
