--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "js-cookie": "^3.0.1",
@@ -22,7 +18,8 @@
     "react-scripts": "^4.0.3",
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^2.1.1"
+    "web-vitals": "^2.1.1",
+    "workbox-window": "^6.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -84,6 +81,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-plugin-react-hooks": "4.0.8",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "husky": "^7.0.0",
     "less-watch-compiler": "^1.16.3",
     "lint-staged": "^11.2.2",
