--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
     "web-vitals": "^2.1.1",
+    "workbox-cacheable-response": "^6.3.0",
     "workbox-window": "^6.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "serve": "yarn run build && serve -s build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "less:compile": "less-watch-compiler --config less-watcher.config.json",
@@ -67,7 +69,11 @@
     "@storybook/node-logger": "^6.3.10",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.10",
+    "@types/jest": "^27.0.2",
     "@types/js-cookie": "^3.0.0",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
@@ -81,10 +87,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-plugin-react-hooks": "4.0.8",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "husky": "^7.0.0",
     "less-watch-compiler": "^1.16.3",
     "lint-staged": "^11.2.2",
